# watchtower-real

./: .gitignore  .replit  CHANGELOG.md  README.md  WEB_COMPAT_REPORT.md  colab_deploy.ipynb  package-lock.json  package.json  render.yaml  replit.md  server.py  vercel.json
.github/workflows/: build-all-platforms.yml  build-apk.yml  build-arm64-debug.yml  build-ios-ipa.yml  build-ipa.yml  build-server.yml  build-windows-x64.yml  build_web.yml  update_sideloading_source.yml
android/: build.gradle  settings.gradle
app/: .gitignore  README.md  pubspec.yaml
app/.design/: SCREENS.md
app/attached_assets/: Pasted-1-pourquoi-lapp-vode-pese-24-md-ta-foutue-quoi-2-tu-va-_1784077494799.txt  replit-1784023373439_1784072446070.md  screen-1784023397111_1784072445916.md
app/lib/: main.dart
app/watchtower/: pubspec.yaml  replit.nix  shorebird.yaml
app/watchtower-real/: README.md  pubspec.yaml
app/web/: index.html  manifest.json
assets/animations/: buffering.json  loading.json
attached_assets/: screen-1784330901096_1784330946194.md
docs/: extensions_system.md  seanime-design-catalog.md  settings_downloads_reference.md
docs/ideas/: seanime_roadmap.md
ios/: Podfile
ios/Runner/: AppDelegate.swift  Runner.entitlements
lib/: app.dart  main.dart  shell.dart  splash_screen.dart
lib/eval/: interface.dart
lib/ffi/: torrent_server_ffi.dart  torrent_server_ffi_web.dart
lib/l10n/: app_ar.arb  app_de.arb  app_en.arb  app_es.arb  app_es_419.arb  app_hi.arb  app_id.arb  app_it.arb  app_pt.arb  app_ru.arb
lib/models/: category.dart  chapter.dart  download.dart  history.g.dart  manga.g.dart  page.dart  update.dart
lib/modules/: db_error_screen.dart
lib/remote/: ntfy_config.dart  ntfy_logger.dart  remote_client.dart  remote_config_provider.dart  remote_web_provider.dart  remote_web_sync_stub.dart  tunnel_service.dart
lib/router/: router.dart
lib/services/: device_capabilities.dart  device_extension_sync.dart  extension_diagnostics.dart  fetch_item_sources.dart  fetch_subtitles.dart  (+16 more)
reel/: pubspec.yaml
repo/: source.json
rust/: Cargo.toml
rust/patches/rustls-platform-verifier/: Cargo.toml
rust/src/api/rhttp/: client.rs
rust_builder/: pubspec.yaml
server/: Dockerfile  docker-compose.yml  package-lock.json  railway.toml  server.js
watchtower/: .gitignore  .replit  AGENT.md  README.md  SCREENS.md  colab_deploy.ipynb  pubspec.yaml  replit.md
(+1232 files in other folders)
