[package]
  name = "rust_lib_watchtower"
  version = "0.1.0"
  edition = "2021"

  [lib]
  crate-type = ["cdylib", "staticlib"]

  [dependencies]
  flutter_rust_bridge = { version = "=2.11.1", features = ["chrono"] }
  image = "0.25.10"
  chrono = "0.4.44"
  futures-util = "0.3.31"
  # rustls-no-provider = rustls stack (hyper-rustls, tokio-rustls, rustls) with
  # rustls-platform-verifier as cert verifier BUT without any bundled crypto
  # provider.  We supply ring ourselves via the direct rustls dep below.
  #
  # DO NOT use the plain "rustls" feature — it adds "__rustls-aws-lc-rs" which
  # enables aws-lc-rs on every rustls crate in the graph.  aws-lc-rs runs FIPS
  # C self-tests at dylib load time (before Flutter/Dart).  On TrollStore those
  # tests call abort() → SIGABRT with 0 logs — instant silent crash on launch.
  reqwest = { version = "0.13.2", default-features = false, features = ["charset", "http2", "rustls-no-provider", "stream", "multipart", "socks", "brotli", "gzip"] }
  # ring is 100% Rust, zero C init, zero FIPS POST — safe on iOS/TrollStore.
  # It is installed as the process-default provider in client.rs before any TLS.
  rustls = { version = "0.23", default-features = false, features = ["ring"] }
  webpki-roots = "0.26"
  tokio = { version = "1.50.0", features = ["full"] }
  tokio-util = "0.7.16"
  epub = "2.1.5"
  zip = "8.5.0"
  
  [patch.crates-io]
  # Stub replacement: prevents aws-lc-rs C code from being compiled.
  # reqwest 0.13.2 references rustls_platform_verifier in its __rustls code path
  # but we always call use_preconfigured_tls() which bypasses that path at runtime.
  # The stub satisfies the type checker with zero C dependencies.
  rustls-platform-verifier = { path = "patches/rustls-platform-verifier" }
  