[package]
  name = "rustls-platform-verifier"
  version = "0.6.2"
  edition = "2021"

  # Stub implementation — no aws-lc-rs dependency.
  # reqwest 0.13.2 references rustls_platform_verifier::Verifier in its __rustls
  # code path, but we use use_preconfigured_tls() so this verifier is never called.
  # The stub satisfies the type checker without pulling in any C code.

  [dependencies]
  rustls = { version = "0.23", default-features = false, features = ["std"] }
  